fix: page title alignment

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ p, div.wp-block-image, figure {
 	font-weight: 700;
 	font-size: 36px;
 	text-transform: capitalize;
+    text-align: center;
 }
 
 
